# haskell-gobject-deriving

./: .gitignore  LICENSE  Readme.md  cabal.project
gobject-deriving/: CHANGELOG.md  LICENSE  gobject-deriving.cabal
gobject-deriving/app/: ListEntry.hs  Main.hs
