cabal-version:      3.4
name:               gobject-deriving
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Peter Siska
maintainer:         siska.pe@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable gobject-deriving
    import:           warnings
    main-is:          Main.hs
    other-modules:    ListEntry
    -- other-extensions:
    build-depends:    base ^>=4.17.1.0
                    , gi-gio
                    , gi-gobject
                    , gi-glib
                    , gi-gtk
                    , gi-gdk
                    , haskell-gi              >=0.25 && <0.27
                    , haskell-gi-base         >=0.25 && <0.27
                    , haskell-gi-overloading  >=1.0  && <1.1
                    , text
                    , transformers
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall
